# PlantPal-GRPC-Postgres

./: Cargo.toml  Dockerfile  Procfile  README.md  build.rs
.sqlx/: query-263bc854d36c4bc93c1fb71666324a3778b0ffbd5ba158ee865870251e2e65b4.json  query-287b1305fd806f532eaf4b20e7f58a74a55b61f4aaf70aa4fba5397b35ec1c9a.json  query-3d6a2808f05c6e82caacf94ad887313fe44a2daf7dd8a3e5b97f8699184341cb.json  query-4ec923e0bfb623e49196072a361c8b9401aaa6fada3fde3f9e0bf7d9f1cc88d4.json  query-5538abcbb4ac8d2d60bc76424cd1a8f4cf607affbd1813d701d637acbbaf524c.json  query-63fa97731ea4325e6ba7ebedb85b120c7269e173dd962002e51af3f0a680b5ed.json  query-71ecc60d636aec02d7769a467120011958016075e49bd4eb45b6ac21c5dc20b6.json  query-72331b6746401aac8c7940bb554f221ff0ab754c19aff52869b7e0a82128e7c6.json  query-8275bb9db594b9513dfc5910ee43aa7a1f1079f5f031220cd1473c9f6991b200.json  query-93bd341ba2b3430494a713b1c19837aaef97db6a359f082333f1e47cb71ac352.json  query-a8635fb3e51e980defafc0b950e66ea6ab92f4c3144115dbd7fff9a7e87bc050.json  query-a92d7c930b0cacc47b00835e14f8b342c330b19880fd8928377cddb868aa57c2.json  query-de76b8715441974ee7ed8d2d7431a1d89818933bb996a42acc6e7d6c15837743.json  query-fad9e2b4f97f4ad4ba3164065057bcb0421194a7ee463ad2064a0461fe34a45d.json  query-ffc1743c5ca1952a559b6284fc4e1bfbd28032c54586b7cfb784917d6f0af46a.json
proto/: store.proto
src/: .env  Procfile  cli.rs  main.rs  plant.rs  server.rs  store.rs
src/server/: private_key.p8  push.rs
