[package]
name = "demo"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"
clap = { version = "4.1.4", features = ["derive"] }
tonic-reflection = "0.6.0"
a2 = "0.7.1"
hyper = { version = "0.14.27", features = ["client", "http2", "tcp"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "time", "postgres"] }
sqlx-core = { version = "0.7.2", features = ["time"] }
sqlx-postgres = { version = "0.7.2", features = ["time"] }
dotenv = "0.15"
chrono = { version = "0.4.23", features = ["serde"] }

[build-dependencies]
tonic-build = "0.8"

[dev-dependencies]
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
futures-util = "0.3.25"
anyhow = "1"
